# nomad-oasis-image

./: README.md  docker-compose.yaml  pyproject.toml
configs/: nomad.yaml
